--- a/view/frontend/templates/ssoLogin.phtml
+++ b/view/frontend/templates/ssoLogin.phtml
@@ -1,4 +1,4 @@
-<?php 
+<?php
 /**
  * Webkul Software.
  *
@@ -9,9 +9,11 @@
  * @license   https://store.webkul.com/license.html
  */
 ?>
-<?php 
+<?php
 $isAuthorized = $block->isAuthorized();
 $isLoggedIn = $block->isLoggedIn();
+$isClientName = $block->getClientName();
+$customerDetails = $block->getLoggedInUserDetail();
 ?>
 <?php if ($isAuthorized && !$isLoggedIn) { ?>
 <?php //if (!$isLoggedIn) { ?>
@@ -19,7 +21,7 @@ $isLoggedIn = $block->isLoggedIn();
     <div class="login-container">
         <div class="block block-customer-login">
             <div class="block-title">
-                    <strong id="block-customer-login-heading" role="heading" aria-level="2">Registered Customers</strong>
+                    <strong id="block-customer-login-heading" role="heading" aria-level="2">Sign In to continue to <?php echo $isClientName; ?></strong>
             </div>
             <div class="block-content" aria-labelledby="block-customer-login-heading">
                 <form class="form form-login" action="<?php $block->getUrl('sso/sso/index');?>" method="post" id="login-form" novalidate="novalidate">
@@ -47,11 +49,41 @@ $isLoggedIn = $block->isLoggedIn();
     </div>
 </main>
 <?php } ?>
-<?php if ($isLoggedIn) { ?>
-<form action"" method="post" id="login-form">
-    <div style="text-align: center;padding:13px;margin:auto;width:35%">
-        <button name="authorization" value="true" style="width:146px;height: 40px;float:left;">Authorize</button>
-        <button name="cancel" value="true" style="width:146px;height: 40px;float:right;">Cancel</button>
+<?php if ($isLoggedIn && $isAuthorized) { ?>
+<form action="" method="post" id="login-form">
+    <div class="sso-main-container">
+        <div class="sso-message-div">
+            <label class="sso-message"><?php echo $isClientName; echo __(' will receive your basic account details') ?></label></div>
+        <div class="sso-authorize-div">
+            <button id="authorization" name="authorization" value="true" class="sso-authorize-button"><?php echo __('Continue as '); ?> <?php echo $customerDetails['name'] ; ?> </button>
+        </div>
+        <div class="sso-cancel-div">
+            <button id="cancel" name="cancel" value="true" class="sso-cancel-button">Cancel</button>
+        </div>
     </div>
 </form>
 <?php } ?>
+<!--<script type="text/javascript">
+require(
+[
+    'jquery',
+    'mage/template',
+    'Magento_Ui/js/modal/alert'
+],function($, template,alert){
+    $(document).ready(function() {
+        $('#login-form').submit(function(event) {
+            $('#authorizationn').attr('disabled','true');
+            // $('#authorization').attr('value','true');
+            $('#cancell').attr('disabled','true');
+            // $('#cancel').attr('value','true');
+            return;
+        });
+        $('$authorizationn').on('click',function(){
+            $('#authorization').attr('value','true');
+        });
+        $('$cancell').on('click',function(){
+            $('#cancel').attr('value','true');
+        });
+    });
+});
+</script>-->
